--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,7 @@ hyperframe==6.1.0
 idna==3.10
 Mako==1.3.10
 MarkupSafe==3.0.2
-numpy==2.3.2
+numpy
 packaging==25.0
 postgrest==1.1.1
 psycopg2-binary==2.9.10
