--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -23,7 +23,7 @@ http {
     }
 
     location /api/ {
-      proxy_pass http://backend:8000;
+      proxy_pass https://ailms-hbk9.onrender.com;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
